# implementing_pca

./: .gitignore  CMakeLists.txt  README.md  basic_pca.cc  dual_pca.cc  image_compression.cc  plane_reconstruction.cc
